fix: features section mobile viewport

--- a/src/styles/base/_global.scss
+++ b/src/styles/base/_global.scss
@@ -19,11 +19,16 @@ body {
 
 .heading-text {
     @include lato-font;
-    font-size: 24px;
+    color: $primary-text;
+    font-size: 21px;
+    line-height: 24px;
     font-style: normal;
     font-weight: 700;
-    line-height: 30px;
-    color: $primary-text;
+
+    @media (min-width: 768px) {
+        font-size: 24px;
+        line-height: 30px;
+    }
 }
 
 .body-text {
