--- a/src/styles/sections/_header.scss
+++ b/src/styles/sections/_header.scss
@@ -2,11 +2,27 @@
 @use "../base/mixins" as *;
 
 .header {
-    background-color: $background-light;
+    background-color: $white;
     padding-top: 50px;
+    position: relative;
 
-    @media (min-width: 1024px) {
+    &__bg-overlay {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
         height: 660px;
+        background-color: $background-light;
+        z-index: 1;
+
+        @media (min-width: 768px) {
+            height: 660px;
+        }
+    }
+
+    .container {
+        position: relative;
+        z-index: 9;
     }
 
     &__logo {
